🎨 fix unreadable dark mode colour

--- a/color-wpinc.css
+++ b/color-wpinc.css
@@ -21,6 +21,6 @@
 		--content-color:white;
 		--link-color:#6badff;
 		--link-active:#06f;
-		--link-background-active-text:#444;
+		--link-background-active-text:white;
 	}
 }
